Added about us row and content. Started Styling about us section

--- a/index.html
+++ b/index.html
@@ -41,5 +41,28 @@
             </div>
         </div>
     </div>
+    <section>
+        <div class="row">
+            <div class="col-12 col-sm-12 aboutus">
+                <h1>About Us!</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 about-content">
+                <h2>
+                    Everybodys Welcome!
+                </h2>
+                <p>
+                    We welcome everyone regardless of gender, sexuality,
+                    size, age, ethnicity or ability. Our gyms are friendly, 
+                    supportive and judgement free spaces where everybody 
+                    can come in, work out and leave feeling good.
+                </p>
+            </div>
+            <div class="col-6 about-image">
+                <a
+            </div>
+        </div>
+    </section>
 </body>
 </html>
