added gym2 image for about us content

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </p>
             </div>
             <div class="col-6 about-image">
-                <a
+                <img src="assets/images/gym2.jpg" alt="man deadlifting">
             </div>
         </div>
     </section>
