Re added gym2.jpg and styled About Us Sections

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-6 about-content">
+            <div class="col-12 col-sm-6 about-content">
                 <h2>
                     Everybodys Welcome!
                 </h2>
@@ -59,7 +59,7 @@
                     can come in, work out and leave feeling good.
                 </p>
             </div>
-            <div class="col-6 about-image">
+            <div class="col-12 col-sm-6 about-image">
                 <img src="assets/images/gym2.jpg" alt="man deadlifting">
             </div>
         </div>
