Added second image to About us and adjusted bootstrap styling

--- a/index.html
+++ b/index.html
@@ -47,20 +47,40 @@
                 <h1>About Us!</h1>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-sm-6 about-content">
-                <h2>
+        <div class="container">  
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-4 about-content">
+                    <h2>
                     Everybodys Welcome!
-                </h2>
-                <p>
+                    </h2>
+                    <p>
                     We welcome everyone regardless of gender, sexuality,
                     size, age, ethnicity or ability. Our gyms are friendly, 
                     supportive and judgement free spaces where everybody 
                     can come in, work out and leave feeling good.
-                </p>
+                    </p>
+                    </div>
+                    <div class="col-12 col-sm-4 about-image">
+                    <img src="assets/images/gym2.jpg" alt="man deadlifting">
+                </div>
             </div>
-            <div class="col-12 col-sm-6 about-image">
-                <img src="assets/images/gym2.jpg" alt="man deadlifting">
+        </div>
+        <div class="container">  
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-6 ">
+                    <img src="assets/images/gym3.jpg" alt="man deadlifting">
+                </div>
+                <div class="col-12 col-sm-6">
+                    <h2>
+                    Everybodys Welcome!
+                    </h2>
+                    <p>
+                    We welcome everyone regardless of gender, sexuality,
+                    size, age, ethnicity or ability. Our gyms are friendly, 
+                    supportive and judgement free spaces where everybody 
+                    can come in, work out and leave feeling good.
+                    </p>
+                    </div>
             </div>
         </div>
     </section>
