Added styling changes to nav bar

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
     </section>
     <section>
         <div class="row">
-            <div class="col-12 classes" id="classes">
+            <div class="col-12 classes bg-classes" id="classes">
                 <h1>
                     Classes!
                 </h1>
             </div>
-            <div class="col-12 col-sm-6 cardio-class .bg-cardio-class">
+            <div class="col-12 col-sm-6 cardio-class bg-cardio-class">
                 <h2>
                     Cardio
                 </h2>
@@ -99,7 +99,7 @@
                     for anyone who love music and energy!
                 </p>
             </div>
-            <div class="col-12 col-sm-6 sculpt-class .bg-sculpt-class">
+            <div class="col-12 col-sm-6 sculpt-class bg-sculpt-class">
                 <h2>
                     Sculpt and Tone
                 </h2>
@@ -109,7 +109,7 @@
                     muscles.
                 </p>
             </div>
-            <div class="col-12 col-sm-6 mind-class .bg-mind-class">
+            <div class="col-12 col-sm-6 mind-class bg-mind-class">
                 <h2>
                     Mind & Body
                 </h2>
@@ -118,7 +118,7 @@
                     strength, flexibility and low impact conditioning.
                 </p>
             </div>
-            <div class="col-12 col-sm-6 func-class .bg-func-class">
+            <div class="col-12 col-sm-6 func-class bg-func-class">
                 <h2>
                     Functional
                 </h2>
