Restyled Classes section and added Interested section with sign up form and styled with CSS and bootstrap button, also eddited the NavBar to have a submit button rather than the home button as it didnt really make sense to have it without a fixed Navbar but i didnt really want that design.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <nav class="navbar nav bg-navbar-color">
             <div class="col-4 col-sm-4 container-fluid menuitem">
-              <a class="navbar-brand" href="#home">Home</a>
+              <a class="navbar-brand" href="#classes">Classes</a>
             </div>
             <div class="col-4 col-sm-4 container-fluid menuitem">
-                <a class="navbar-brand" href="#classes">Classes</a>
+                <a class="navbar-brand" href="#signup"><input type="submit" class="btn btn-light" value="SIGN UP!"></a>
             </div>
             <div class="col-4 col-sm-4 container-fluid menuitem">
                 <a class="navbar-brand" href="#">Contact</a>
@@ -129,6 +129,31 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="row">
+            <div class="col-12 sign-heading" id="signup">
+                <h1>Interested?</h1>
+                <h2>Sign Up Below!</h2>
+            </div>
+            <div class="col-12 form">
+                <div class="fname-form">
+                    <label for="fname" action="post">First Name:</label>
+                    <input type="text" name="fname" id="fname" placeholder="First Name" required>
+                </div>
+                <div class="lname-form">
+                    <label for="lname" action="post">Last Name:</label>
+                    <input type="text" name="lname" id="lname" placeholder="Last Name" required>
+                </div>
+                <div class="email-form">
+                    <label for="email" action="post">Email:</label>
+                    <input type="email" name="email" id="email;" placeholder="Email Address" required>
+                </div>
+                <div class="form-button">
+                    <input type="submit" class="btn btn-light" value="Sign Up!">
+                </div>
+            </div>
+        </div>
+    </section>    
     <footer>
     </footer>
 </body>
