Added contact sections and styled in CSS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="navbar-brand" href="#signup"><input type="submit" class="btn btn-light" value="SIGN UP!"></a>
             </div>
             <div class="col-4 col-sm-4 container-fluid menuitem">
-                <a class="navbar-brand" href="#">Contact</a>
+                <a class="navbar-brand" href="#contact">Contact</a>
             </div>
           </nav>
         </div>
@@ -150,6 +150,30 @@
                 </div>
                 <div class="form-button">
                     <input type="submit" class="btn btn-light" value="Sign Up!">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+            <div class="row justify-content-around">
+                <div class="col-12 contact-us bg-contact-us" id="contact">
+                    <h1>Contact Us!</h1>
+                    <p>Need more help? Contact us by email or phone, you can even 
+                    come to see us!
+                    </p>
+                </div>
+                <div class="col-12 col-sm-6 contact-address bg-contact-us">
+                    <h2>Address</h2>
+                    <p>
+                    6, Gym lane, Gymville, Gym city.
+                    GY78YM
+                    </p>
+                </div>
+                <div class="col-12 col-sm-6 contact-num bg-contact-us">
+                    <h2>Contact</h2>
+                    <p>Phone:07772323322</p>
+                    <h2>Email</h2>
+                    <p>FreeStyleGym@email.com</p>
                 </div>
             </div>
         </div>
