added footer content and styled css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/436d2f19ad.js" crossorigin="anonymous"></script>
+    <link href="css/hover.css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>FreeStyle Gym</title>
 </head>
@@ -133,7 +134,7 @@
         <div class="row">
             <div class="col-12 sign-heading" id="signup">
                 <h1>Interested?</h1>
-                <h2>Sign Up Below!</h2>
+                <h2>Want to become a member? Sign Up Below!</h2>
             </div>
             <div class="col-12 form">
                 <div class="fname-form">
@@ -146,7 +147,7 @@
                 </div>
                 <div class="email-form">
                     <label for="email" action="post">Email:</label>
-                    <input type="email" name="email" id="email;" placeholder="Email Address" required>
+                    <input type="email" name="email" id="email;" placeholder="Your Email" required>
                 </div>
                 <div class="form-button">
                     <input type="submit" class="btn btn-light" value="Sign Up!">
@@ -162,14 +163,14 @@
                     come to see us!
                     </p>
                 </div>
-                <div class="col-12 col-sm-6 contact-address bg-contact-us">
+                <div class="col-12 contact-address bg-contact-us">
                     <h2>Address</h2>
                     <p>
                     6, Gym lane, Gymville, Gym city.
                     GY78YM
                     </p>
                 </div>
-                <div class="col-12 col-sm-6 contact-num bg-contact-us">
+                <div class="col-12 contact-num bg-contact-us">
                     <h2>Contact</h2>
                     <p>Phone:07772323322</p>
                     <h2>Email</h2>
@@ -179,6 +180,19 @@
         </div>
     </section>    
     <footer>
+        <div class="row footer">
+                <div class="col-4 copyright">
+                    <h6>Copyright © 2021 FreeStyle Gym</h6>
+                </div>
+                <div class="col-4 footer-logo">
+                    <h4>FreeStlye Gym</h4>
+                </div>
+                <div class="col-4 socials light">
+                    <a target="_blank" href="#"><i class="fab fa-facebook"></i></a>
+                    <a target="_blank" href="#"><i class="fab fa-twitter-square"></i></a>
+                    <a target="_blank" href="#"><i class="fab fa-instagram-square"></i></a>
+                </div>
+        </div>
     </footer>
 </body>
 </html>
