Fixed more html validator errore!

--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
                 </div>
                 <div class="col-12 form">
                 <div class="fname-form">
-                    <label for="fname" action="post">First Name:</label>
+                    <label for="fname">First Name:</label>
                     <input type="text" name="fname" id="fname" placeholder="First Name" required>
                 </div>
                 <div class="lname-form">
-                    <label for="lname" action="post">Last Name:</label>
+                    <label for="lname">Last Name:</label>
                     <input type="text" name="lname" id="lname" placeholder="Last Name" required>
                 </div>
                 <div class="email-form">
-                    <label for="email" action="post">Email:</label>
-                    <input type="email" name="email" id="email;" placeholder="Your Email" required>
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" placeholder="Your Email" required>
                 </div>
                 <div class="form-button">
                     <input type="submit" class="btn btn-light" value="Sign Up!">
