rectified CSS validator errors

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             </div>
         </div>
         <nav class="navbar nav bg-navbar-color">
-            <div class="col-4 col-sm-4 container-fluid menuitem">
+            <div class="col-4 col-sm-4 menuitem">
               <a class="navbar-brand" href="#classes">Classes</a>
             </div>
-            <div class="col-4 col-sm-4 container-fluid justify-content-center menuitem">
+            <div class="col-4 col-sm-4 justify-content-center menuitem">
                 <a class="navbar-brand btn btn-light animate__animated" href="#signup" id="sign_up">
                     SIGN UP!
                 </a>
             </div>
-            <div class="col-4 col-sm-4 container-fluid menuitem">
+            <div class="col-4 col-sm-4 menuitem">
                 <a class="navbar-brand" href="#contact">Contact</a>
             </div>
           </nav>
@@ -182,7 +182,6 @@
                     <p>FreeStyleGym@email.com</p>
                 </div>
             </div>
-        </div>
     </section>    
     <footer>
         <div class="row footer">
