Added more content to readme.md and also added wire frame file

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </section>
     <section>
         <div class="row">
-            <form action="https://formdump.codeinstitute.net/" method="POST">
+            <form action="https://aaronhughes424.github.io/HTMLandCSSProject/" method="POST">
                 <div class="col-12 sign-heading" id="signup">
                     <h1>Interested?</h1>
                     <h2>Want to become a member? Sign Up Below!</h2>
