Corrected some spelling mistakes.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     Why us?
                     </h2>
                     <p>
-                        At FreeStlye Gym, you'll find everything you need for a safe and 
+                        At FreeStyle Gym, you'll find everything you need for a safe and 
                         great workout – you can train with confidence at the worlds 
                         favourite gym.
                     </p>
@@ -189,7 +189,7 @@
                     <p>Copyright © 2021 FreeStyle Gym</p>
                 </div>
                 <div class="col-4 footer-logo">
-                    <h4>FreeStlye Gym</h4>
+                    <h4>FreeStyle Gym</h4>
                 </div>
                 <div class="col-4 socials light">
                     <a target="_blank" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
